# vita3k-shader-tests

./: CMakeLists.txt  READMD.md  README.md  cli.py  gxpsplit.md  gxpsplit.py  notes.md
scratch/: atlier.gxp  atlier.gxp.split  vtstmsk.gxp  vtstmsk.gxp.split  vtstmsk_gt_mask2_reg.gxp.split
shaders/: mem_test_program.cg  va_test_program.cg
tests/p4gfrag1/gxp/: p4g_frag_test149
tests/p4gfrag1/input/: p4g_frag_test10.txt  p4g_frag_test11.txt  p4g_frag_test110.txt  p4g_frag_test111.txt  p4g_frag_test112.txt  p4g_frag_test113.txt  p4g_frag_test114.txt  p4g_frag_test115.txt  p4g_frag_test116.txt  p4g_frag_test117.txt  p4g_frag_test118.txt  p4g_frag_test119.txt  p4g_frag_test12.txt  p4g_frag_test120.txt  p4g_frag_test121.txt  p4g_frag_test122.txt  p4g_frag_test123.txt  p4g_frag_test124.txt  p4g_frag_test125.txt  p4g_frag_test126.txt  p4g_frag_test127.txt  p4g_frag_test128.txt  p4g_frag_test129.txt  p4g_frag_test13.txt  p4g_frag_test130.txt  p4g_frag_test131.txt  p4g_frag_test132.txt  p4g_frag_test133.txt  p4g_frag_test134.txt  p4g_frag_test135.txt  p4g_frag_test136.txt  p4g_frag_test137.txt  p4g_frag_test138.txt  p4g_frag_test139.txt  p4g_frag_test14.txt  p4g_frag_test140.txt  p4g_frag_test141.txt  p4g_frag_test142.txt  p4g_frag_test143.txt  p4g_frag_test144.txt  (+10 more)
tests/p4gfrag1/res/: p4g_frag_test10.txt  p4g_frag_test11.txt  p4g_frag_test110.txt  p4g_frag_test111.txt  p4g_frag_test112.txt  p4g_frag_test113.txt  p4g_frag_test114.txt  p4g_frag_test115.txt  p4g_frag_test116.txt  p4g_frag_test117.txt  p4g_frag_test118.txt  p4g_frag_test119.txt  p4g_frag_test12.txt  p4g_frag_test120.txt  p4g_frag_test121.txt  p4g_frag_test122.txt  p4g_frag_test123.txt  p4g_frag_test124.txt  p4g_frag_test125.txt  p4g_frag_test126.txt  p4g_frag_test127.txt  p4g_frag_test128.txt  p4g_frag_test129.txt  p4g_frag_test13.txt  p4g_frag_test130.txt  p4g_frag_test131.txt  p4g_frag_test132.txt  p4g_frag_test133.txt  p4g_frag_test134.txt  p4g_frag_test135.txt  p4g_frag_test136.txt  p4g_frag_test137.txt  p4g_frag_test138.txt  p4g_frag_test139.txt  p4g_frag_test14.txt  p4g_frag_test140.txt  p4g_frag_test141.txt  p4g_frag_test142.txt  p4g_frag_test143.txt  p4g_frag_test144.txt  (+10 more)
tests/p4gvert1/gxp/: p4g_vert_test145
tests/p4gvert1/input/: p4g_vert_test10.txt  p4g_vert_test11.txt  p4g_vert_test110.txt  p4g_vert_test111.txt  p4g_vert_test112.txt  p4g_vert_test113.txt  p4g_vert_test114.txt  p4g_vert_test115.txt  p4g_vert_test116.txt  p4g_vert_test117.txt  p4g_vert_test118.txt  p4g_vert_test119.txt  p4g_vert_test12.txt  p4g_vert_test120.txt  p4g_vert_test121.txt  p4g_vert_test122.txt  p4g_vert_test123.txt  p4g_vert_test124.txt  p4g_vert_test125.txt  p4g_vert_test126.txt  p4g_vert_test127.txt  p4g_vert_test128.txt  p4g_vert_test129.txt  p4g_vert_test13.txt  p4g_vert_test130.txt  p4g_vert_test131.txt  p4g_vert_test132.txt  p4g_vert_test133.txt  p4g_vert_test134.txt  p4g_vert_test135.txt  p4g_vert_test136.txt  p4g_vert_test137.txt  p4g_vert_test138.txt  p4g_vert_test139.txt  p4g_vert_test14.txt  p4g_vert_test140.txt  p4g_vert_test141.txt  p4g_vert_test142.txt  p4g_vert_test143.txt  p4g_vert_test144.txt  (+10 more)
tests/p4gvert1/res/: p4g_vert_test10.txt  p4g_vert_test11.txt  p4g_vert_test110.txt  p4g_vert_test111.txt  p4g_vert_test112.txt  p4g_vert_test113.txt  p4g_vert_test114.txt  p4g_vert_test115.txt  p4g_vert_test116.txt  p4g_vert_test117.txt  p4g_vert_test118.txt  p4g_vert_test119.txt  p4g_vert_test12.txt  p4g_vert_test120.txt  p4g_vert_test121.txt  (+35 more)
tests/vtstmask_nomask_multicond_sa/: regs.txt
tests/vtstmsk_dsy_mask0/: regs.txt
tests/vtstmsk_gt_mask0_reg/: regs.txt
tests/vtstmsk_gt_mask1_reg/: regs.txt
worker/: CMakeLists.txt  main.cpp  main_float_view.cpp
worker/include/: shaders.h
worker/shaders/: output_vertex0.cg  output_vertex1.cg  output_vertex2.cg
(+1311 files in other folders)
